<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuscaMinas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo_inicio">BuscaminasDJM!</string>
    <string name="titulo_menu">Menu Principal!</string>
    
    	<string name="menu1">Menu Principal</string>
        <string name="menu2">JUGAR!</string>
        <string name="menu3">AcercaDe</string>
        
        <string name="Nivel_Basico">Nivel Basico</string>
        <string name="Nivel_Intermedio">Nivel Intermedio</string>
        <string name="Nivel_Avanzado">Nivel Avanzado</string>
        
        <string name="Janina_Costa">JANINA COSTA</string>
        <string name="Denisse_Pintado">DENISSE PINTADO</string>
        <string name="Jonathan_M">JONATHAN MENDIETA</string>
        
        <string name="MENU">MENU!</string>
    	<string name="DIFICULTAD">RECORDS</string>
    	<string name="ACERCA_DE">ACERCA DE</string>
    	<string name="bla"></string>
    	<string name="ooo"></string>
    	<string name="JUGAR">JUGAR</string>
    	<string name="INSTRUCCIONES">INSTRUCCIONES</string>

    	
    	
    	<string name="TIME">TIME</string>
    	<string name="app_creditos">Creditos</string>
    	<string name="app_config">Configuraciones</string>
    	<string name="app_instrucciones">Instrucciones</string>
    
    	<string name="facil">Fácil</string>
        <string name="intermedio">Intermedio</string>
        <string name="avanzado">Avanzado</string>
        <string name="dificil">Avanzado</string>
        <string name="_00">00</string>
        <string name="time">TIME</string>
        <string name="todo">TODO</string>
        <string name="niveles_de_dificultad">NIVELES DE DIFICULTAD</string>
        
        <string name="app_records">Records</string>
        <string name ="iddes">DESARROLLADORES!</string>
        <string name="bombcount">Flags</string>
        
        
    
    
    	
</resources>
