<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     
    android:orientation="vertical" >
    
                        
                      <TextView
                            android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Denisse_Pintado"/>
                      <TextView
                            android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Jonathan_M"/>
                      <TextView
                            android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Janina_Costa"/>
    

</LinearLayout>
