<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondojuego"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:text="@string/niveles_de_dificultad"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:background="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />


      <Button
          android:id="@+id/idbotonfacil"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="40dp"
          android:background="@drawable/bomba"
          android:textColor="#000000"
          android:textStyle="bold" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="#000000"
          android:layout_gravity="center"
          android:text="@string/facil"
          android:textColor="#ffffff"
          android:textSize="18dp"
          android:textStyle="bold" />

    <Button
        android:id="@+id/idbotonintermedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        
        android:background="@drawable/bomba"
        />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/intermedio"
          android:textColor="#ffffff"
          android:background="#000000"
          android:layout_gravity="center"
          android:textSize="18dp"
          android:textStyle="bold" />

    <Button
        android:id="@+id/idbotonavanzado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/bomba"
        android:textColor="#000000"
         />
     
     <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
      	  android:layout_gravity="center"
          android:text="@string/avanzado"
          android:textColor="#ffffff"
          android:background="#000000"
          android:textSize="18dp"
          android:textStyle="bold" />

</LinearLayout>
